@@ -2,9 +2,13 @@
 
 alias pa_rule-edit='php -r "require_once '"'"'utils/rules-edit.php'"'"';" $@'
 alias pa_rule-merger='php -r "require_once '"'"'utils/rule-merger.php'"'"';" $@'
+
 alias pa_address-edit='php -r "require_once '"'"'utils/address-edit.php'"'"';" $@'
+alias pa_address-merger='php -r "require_once '"'"'utils/address-merger.php'"'"';" $@'
+
 alias pa_service-edit='php -r "require_once '"'"'utils/service-edit.php'"'"';" $@'
 alias pa_service-merger='php -r "require_once '"'"'utils/service-merger.php'"'"';" $@'
+
 alias pa_upload-config='php -r "require_once '"'"'utils/upload-config.php'"'"';" $@'
 alias pa_override-finder='php -r "require_once '"'"'utils/override-finder.php'"'"';" $@'
 
