@@ -1,7 +1,8 @@
 CHANGELOG
 
 1.5.11
-* New 'service-merger' utility 'service-merger.php'. Safer, faster and find more dups than MT.
+* new function AddressCommon->hasDescendants() to for objects with same name in lower level (child devicegroups)
+* New 'address-merger' and 'service-merger' utility 'service-merger.php'. Safer, faster and find more dups than MT.
 
 utils:
 address-edit: new filers 'overriden.at.lower.level' and 'overrides.upper.level'
